make sure next gets security patch

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afterwhen.co",
   "description": "",
   "dependencies": {
-    "next": "7",
+    "next": "~7.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
